# plasma-bigscreen

./: .flatpak-manifest.json  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .kde-ci.yml  ATTRIBUTION  CMakeLists.txt  COPYING  COPYING.APACHE2  README.md  REUSE.toml  et --hard HEAD@{1}  org.kde.plasma.bigscreen.desktop  org.kde.plasma.bigscreen.metainfo.xml  org.kde.plasma.mycroft.bigscreen.metainfo.xml
components/: AbstractDelegate.qml  CMakeLists.txt  TileView.qml  bigscreenplugin.cpp  bigscreenplugin.h  bigscreenplugin_dbus.cpp  bigscreenplugin_dbus.h  envreader.cpp  envreader.h  global.cpp  global.h  imagepalette.cpp  imagepalette.h  qmldir
components/bigscreenplugin/: CMakeLists.txt  Messages.sh  backhandler.cpp  backhandler.h  bigscreenplugin_dbus.cpp  bigscreenplugin_dbus.h  envreader.h  global.cpp  global.h
components/bigscreenplugin/qml/: AbstractDelegate.qml  KCMAbstractDelegate.qml  NavigationSoundEffects.qml  OverlayDialog.qml  OverlaySidebar.qml  OverlayWindow.qml  TaskDelegate.qml  TileListView.qml  TileRepeater.qml  TileView.qml
components/bigscreenshell/: CMakeLists.txt  bigscreenshellsettings.cpp  bigscreenshellsettings.h
components/controllerhandler/: CMakeLists.txt  controllerhandlerstatus.cpp  controllerhandlerstatus.h
components/qml/: AbstractDelegate.qml  FullScreenOverlay.qml  Hack.qml  IconDelegate.qml  IconNewDelegate.qml  KCMAbstractDelegate.qml  NavigationSoundEffects.qml  TaskDelegate.qml  TileListView.qml  TileRepeater.qml  TileView.qml  Units.qml
containments/homescreen/plugin/: CMakeLists.txt  applicationlistmodel.cpp  applicationlistmodel.h  biglauncher_dbus.cpp  biglauncher_dbus.h  biglauncherhomescreen.cpp  biglauncherhomescreen.h  biglauncherplugin.h  configuration.cpp  configuration.h  favslistmodel.cpp  favslistmodel.h  gamemanager.cpp  gamemanager.h  gamesapplistmodel.cpp  gamesapplistmodel.h  kcmslistmodel.cpp  kcmslistmodel.h  metadata.json  qmldir  shortcuts.cpp  shortcuts.h  voiceapplistmodel.cpp
envmanager/: CMakeLists.txt  README.md  config.h  main.cpp  settings.cpp  settings.h  utils.h
inputhandler/: 40-uinput-input-group.rules  40-uinput-uaccess.rules  CMakeLists.txt  abstractsystem.cpp  abstractsystem.h  controllermanager.cpp  controllermanager.h  device.cpp  device.h  devicewatcher.cpp  devicewatcher.h  inputhandlerdbus.cpp  inputhandlerdbus.h  inputhandlersettings.kcfg  inputhandlersettings.kcfgc  kwinfakeinputsystem.cpp  kwinfakeinputsystem.h  main.cpp  org.kde.plasma.bigscreen.inputhandler.desktop.cmake  sdlcontroller.cpp  sdlcontroller.h  xdgremotedesktopsystem.cpp  xdgremotedesktopsystem.h
inputhandler/libcec/: ceccontroller.cpp  ceccontroller.h  cecworker.cpp  cecworker.h
kcms/: CMakeLists.txt
kcms/audio-device-chooser/: CMakeLists.txt  DeviceChooserPage.qml  DeviceListItem.qml  Messages.sh  audiodevice.cpp  audiodevice.h  kcm_audiodevice.desktop  kcm_mediacenter_audiodevice.desktop  kcm_mediacenter_audiodevice.json  main.qml  org.audio.device.chooser.desktop  qml.qrc
kcms/audio-device-chooser/delegates/: AudioDelegate.qml
kcms/audio-device-chooser/package/: metadata.desktop
kcms/audio-device-chooser/ui/: AudioDelegateSidebar.qml  DeviceChooserPage.qml  SettingsItem.qml  main.qml
kcms/audio-device-chooser/views/: RowLabelView.qml  TileView.qml
kcms/bigscreen-settings/: CMakeLists.txt  Messages.sh  bigscreensettings.cpp  bigscreensettings.desktop  bigscreensettings.h  bigscreensettings.json  colorschemelistmodel.cpp  colorschemelistmodel.h  globalthemelistmodel.cpp  globalthemelistmodel.h  kcm_mediacenter_bigscreen_settings.json  themelistmodel.cpp  themelistmodel.h  timedated1.xml  timedated_interface.cpp  timedated_interface.h
kcms/bigscreen-settings/package/: metadata.desktop
kcms/bigscreen-settings/ui/: ColorSchemeSidebar.qml  DeviceTimeSettings.qml  DeviceTimeSettingsSidebar.qml  SettingsAreaLoader.qml  ShortcutsPickerSidebar.qml  ThemeSidebar.qml  TimePicker.qml  main.qml
kcms/bluetooth/: CMakeLists.txt  Messages.sh  bluetooth.cpp  bluetooth.h  devicesproxymodel.cpp  devicesproxymodel.h  kcm_mediacenter_bluetooth.json  pin-code-database.xml
kcms/display/: CMakeLists.txt  Messages.sh  displaymodel.cpp  displaymodel.h  displaysettings.cpp  displaysettings.h  kcm_mediacenter_display.json
kcms/input/: CMakeLists.txt  Messages.sh  inputsettings.cpp  inputsettings.h  kcm_mediacenter_input.json
kcms/kdeconnect/: CMakeLists.txt  Messages.sh  kcm_mediacenter_kdeconnect.json  kdeconnect.cpp  kdeconnect.h  mediacenter_kdeconnect.desktop  mediacenter_kdeconnect.json
kcms/plasma-settings-shell/: CMakeLists.txt
kcms/remote-controllers/: CMakeLists.txt  Messages.sh  mediacenter_remotecontroller.desktop  remotecontroller.cpp  remotecontroller.h
kcms/wallpaper/: CMakeLists.txt  Messages.sh  kcm_mediacenter_wallpaper.json  wallpaper.cpp
kcms/webapps/: CMakeLists.txt  Messages.sh  kcm_mediacenter_webapps.json  webappcreator.cpp  webappcreator.h  webappmanager.cpp  webappmanager.h  webappmanagermodel.cpp  webappmanagermodel.h  webappskcm.cpp  webappskcm.h
kcms/wifi/: CMakeLists.txt  Messages.sh  kcm_mediacenter_wifi.json  mediacenter_wifi.desktop  mediacenter_wifi.json  wifi.cpp  wifi.h
kded/start/: CMakeLists.txt  kded_plasma_bigscreen_start.json  start.cpp  start.h
plugin/: CMakeLists.txt  applicationlistmodel.cpp  bigLauncher.notifyrc  biglauncherplugin.cpp  notify.cpp  notify.h  voiceapplistmodel.h
settingsapp/: CMakeLists.txt  Messages.sh  kcmslistmodel.cpp  kcmslistmodel.h  main.cpp  module.cpp  module.h  modulesmodel.h  org.kde.plasma.bigscreen.settings.desktop  settingsapp.cpp  settingsapp.h
settingsapp/qml/: ConfigWindowSidebar.qml  KCMContainer.qml  Main.qml  SidebarDelegate.qml
uvcviewer/: CMakeLists.txt  README.md  org.kde.plasma.bigscreen.uvcviewer.desktop
uvcviewer/src/: CMakeLists.txt  CameraHomePage.qml  Main.qml  Messages.sh  UvcViewer.qml  main.cpp
webapp-viewer/: CMakeLists.txt  Messages.sh  browsermanager.cpp  browsermanager.h  main.cpp  useragent.cpp  useragent.h  webprofile.cpp  webprofile.h
webapp-viewer/qml/: WebApp.qml  WebAppView.qml  WebView.qml
(+980 files in other folders)
