# SPDX-FileCopyrightText: 2019 Marco Martin <mart@kde.org>
# SPDX-FileCopyrightText: 2019 Aditya Mehra <aix.m@outlook.com>
# SPDX-License-Identifier: GPL-2.0-or-later

# add_subdirectory(audio-device-chooser) <- This isn't needed for now
add_subdirectory(plasma-settings-shell) # What even is this?
add_subdirectory(wifi)
add_subdirectory(kdeconnect)
add_subdirectory(bigscreen-settings)
# add_subdirectory(display)